fix icon position when editNav active

--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -12,6 +12,8 @@
     />
   </head>
   <body>
+
+    <!-- HEADER -->
     <div class="topnav" id="myTopnav">
       <div class="header-logo">
       <img alt="logo" src="Logo.png" width="auto" height="auto" />
@@ -29,6 +31,8 @@
     </div>
     </div>
   </div>
+
+  <!-- MAIN -->
     <main>
       <div class="hero-section">
         <div class="hero-content">
@@ -52,6 +56,8 @@
         </button>
       </div>
 
+
+      <!-- MODAL -->
       <div class="bground">
         <div class="content">
           <span class="close"></span>
@@ -210,6 +216,8 @@
         </div>
       </div>
     </main>
+
+    <!-- FOOTER -->
     <footer>
       <p class="copyrights">
         Copyright 2014 - 2022, GameOn Inc.
