issue #2 solved : validation for each input to submit

--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -72,6 +72,7 @@
                 class="formData">
                 <label for="first">Prénom</label><br>
                 <input
+                  required
                   class="text-control"
                   type="text"
                   id="first"
@@ -83,6 +84,7 @@
                 class="formData">
                 <label for="last">Nom</label><br>
                 <input
+                  required
                   class="text-control"
                   type="text"
                   id="last"
@@ -94,6 +96,7 @@
                 class="formData">
                 <label for="email">E-mail</label><br>
                 <input
+                  required
                   class="text-control"
                   type="email"
                   id="email"
@@ -104,6 +107,7 @@
                 class="formData">
                 <label for="birthdate">Date de naissance</label><br>
                 <input
+                  required
                   class="text-control"
                   type="date"
                   id="birthdate"
@@ -113,11 +117,18 @@
               <div
                 class="formData">
                 <label for="quantity">À combien de tournois GameOn avez-vous déjà participé ?</label><br>
-                <input type="number" class="text-control" id="quantity" name="quantity" min="0" max="99">
+                <input 
+                  required
+                  type="number" 
+                  class="text-control" 
+                  id="quantity" 
+                  name="quantity" 
+                  min="0" 
+                  max="99"
+                />
               </div>
               <p class="text-label">A quel tournoi souhaitez-vous participer cette année ?</p>
-              <div
-                class="formData">
+              <div class="formData">
                 <input
                   class="checkbox-input"
                   type="radio"
@@ -189,12 +200,13 @@
               <div
                 class="formData">
                 <input
+                  required
                   class="checkbox-input"
                   type="checkbox"
                   id="checkbox1"
                   checked
                 />
-                <label class="checkbox2-label" for="checkbox1" required>
+                <label class="checkbox2-label" for="checkbox1">
                   <span class="checkbox-icon"></span>
                   J'ai lu et accepté les conditions d'utilisation.
                 </label>
@@ -210,7 +222,7 @@
                 class="btn-submit"
                 type="submit"
                 class="button"
-                value="C'est parti" 
+                value="C'est parti"
               />
             </form>
           </div>
