fix launch modal with submit validity

--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -128,7 +128,7 @@
                 />
               </div>
               <p class="text-label">A quel tournoi souhaitez-vous participer cette année ?</p>
-              <div class="formData">
+              <div class="formData locationTournament">
                 <input
                   class="checkbox-input"
                   type="radio"
