--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -63,6 +63,7 @@
           <span class="close"></span>
           <div class="modal-body">
             <form
+              id="myForm"
               name="reserve"
               action="index.html"
               method="get"
@@ -130,6 +131,7 @@
               <p class="text-label">A quel tournoi souhaitez-vous participer cette année ?</p>
               <div class="formData locationTournament">
                 <input
+                required
                   class="checkbox-input"
                   type="radio"
                   id="location1"
