--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -70,7 +70,7 @@
               onsubmit="return validate();"
             >
               <div
-                class="formData">
+                class="formData" data-error="Veuillez entrer 2 caractères ou plus pour le champ du prénom.">
                 <label for="first">Prénom</label><br>
                 <input
                   required
@@ -82,7 +82,7 @@
                 /><br>
               </div>
               <div
-                class="formData">
+                class="formData" data-error="Veuillez entrer 2 caractères ou plus pour le champ du nom.">
                 <label for="last">Nom</label><br>
                 <input
                   required
@@ -94,7 +94,7 @@
                 /><br>
               </div>
               <div
-                class="formData">
+                class="formData" data-error="Veuillez entrer une adresse mail valide.">
                 <label for="email">E-mail</label><br>
                 <input
                   required
@@ -105,7 +105,7 @@
                 /><br>
               </div>
               <div
-                class="formData">
+                class="formData" data-error="Veuillez entrer une date de naissance valide.">
                 <label for="birthdate">Date de naissance</label><br>
                 <input
                   required
@@ -116,7 +116,7 @@
                 /><br>
               </div>
               <div
-                class="formData">
+                class="formData" data-error="Vous devez indiquez un nombre de tournois entre 1 et 99">
                 <label for="quantity">À combien de tournois GameOn avez-vous déjà participé ?</label><br>
                 <input 
                   required
@@ -129,7 +129,7 @@
                 />
               </div>
               <p class="text-label">A quel tournoi souhaitez-vous participer cette année ?</p>
-              <div class="formData locationTournament">
+              <div class="formData locationTournament" data-error="Vous devez choisir une option.">
                 <input
                 required
                   class="checkbox-input"
@@ -200,7 +200,7 @@
               </div>
 
               <div
-                class="formData">
+                class="formData" data-error="Vous devez vérifier que vous acceptez les termes et conditions.">
                 <input
                   required
                   class="checkbox-input"
