--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -206,6 +206,7 @@
                   class="checkbox-input"
                   type="checkbox"
                   id="checkbox1"
+                  name="cou"
                   checked
                 />
                 <label class="checkbox2-label" for="checkbox1">
@@ -213,7 +214,7 @@
                   J'ai lu et accepté les conditions d'utilisation.
                 </label>
                 <br>
-                <input class="checkbox-input" type="checkbox" id="checkbox2" />
+                <input class="checkbox-input" type="checkbox" id="checkbox2" name="newsletter" />
                 <label class="checkbox2-label" for="checkbox2">
                   <span class="checkbox-icon"></span>
                   Je souhaite être prévenu des prochains évènements.
