fix email regex

--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -62,8 +62,8 @@
         <div class="content">
           <span class="close"></span>
           <div class="modal-body">
-            <div class="afterSubmit">Merci pour </br> votre inscription
-              <button class="btn-signup btn-signup--after">
+            <div class="confirmation-container">Merci pour </br> votre inscription
+              <button class="btn-signup confirmation-btn">
                 Fermer
               </button>
             </div>
