add custom validity for birthdate / fix location validity / clean code 50%

--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
     <title>Reservation</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <link rel="stylesheet" href="modal.css" />
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="stylesheet" href="modal.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link
       href="https://fonts.googleapis.com/css?family=DM+Sans"
-      rel="stylesheet"
-    />
+      rel="stylesheet">
   </head>
   <body>
 
     <!-- HEADER -->
     <div class="topnav" id="myTopnav">
       <div class="header-logo">
-      <img alt="logo" src="Logo.png" width="auto" height="auto" />
+      <img alt="logo" src="Logo.png">
     </div>
     <div class="main-navbar">
       
@@ -30,7 +29,6 @@
       </a>
     </div>
     </div>
-  </div>
 
   <!-- MAIN -->
     <main>
@@ -49,7 +47,7 @@
           </button>
         </div>
         <div class="hero-img">
-          <img src="./bg_img.jpg" alt="img" />
+          <img src="./bg_img.jpg" alt="img">
         </div>
         <button class="btn-signup modal-btn">
           je m'inscris
@@ -62,7 +60,7 @@
         <div class="content">
           <span class="close"></span>
           <div class="modal-body">
-            <div class="confirmation-container">Merci pour </br> votre inscription
+            <div class="confirmation-container">Merci pour <br> votre inscription
               <button class="btn-signup confirmation-btn">
                 Fermer
               </button>
@@ -212,7 +210,7 @@
                   class="checkbox-input"
                   type="checkbox"
                   id="checkbox1"
-                  name="cou"
+                  name="cos"
                   checked
                 />
                 <label class="checkbox2-label" for="checkbox1">
@@ -232,9 +230,8 @@
                 <br>
               </div>
               <input
-                class="btn-submit"
+                class="btn-submit button"
                 type="submit"
-                class="button"
                 value="C'est parti"
               />
             </form>
