fix submit validity for Chrome

--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -133,7 +133,7 @@
                 />
               </div>
               <p class="text-label">A quel tournoi souhaitez-vous participer cette année ?</p>
-              <div class="formData" data-error="Vous devez choisir une option.">
+              <div id = "location" class="formData" data-error="Vous devez choisir une option.">
                 <input
                   required
                   class="checkbox-input"
