issue #5 solved : tests manuels + clean code 100%

--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -60,7 +60,7 @@
         <div class="content">
           <span class="close"></span>
           <div class="modal-body">
-            <div class="confirmation-container">Merci pour <br> votre inscription
+            <div class="confirmation-container">Merci pour <br> votre inscription !
               <button class="btn-signup confirmation-btn">
                 Fermer
               </button>
